[project]
name = "rgs-django-spatial"
version = "0.2.0"
description = "Data model and functions for configuring maps sources"
readme = "README.md"
requires-python = "~=3.12"
license-files = ["LICENSE"]
authors = [
    { name = "Bastiaan Roos", email = "bastiaan.roos@roosgeo.nl" }
]
maintainers = [
    { name = "Bastiaan Roos" }
]
keywords = []
# GDAL/geopandas/owslib/s3fs komen via conda/pixi bij de consumers — niet als
# pip-deps afdwingen (conform hoe het pakket GDAL ook niet pint).
dependencies = [
    "django>=5.0",
    "django-ninja>=1.6",
    "pyyaml>=6",
]

[project.urls]
repository = "https://github.com/GetThePointGit/rgs-django-spatial"

[tool.setuptools]
packages = { find = { include = ["rgs_django_spatial*"] } }
include-package-data = true


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "testapp.settings_test"
django_find_project = false
# tests/ op sys.path zetten vóór conftest-collectie, zodat pytest-django de
# testapp-settings kan importeren (conftest.py alleen is te laat in de hook-volgorde).
pythonpath = ["tests"]

# FORMATTING
[tool.ruff]
# see https://docs.astral.sh/ruff/rules/ for meaning of rules
line-length = 119

#Exclude external packages in formatter
extend-exclude = [".pixi/*", "var/*", "migrations/*",]
include = ["*.py"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["D", "E", "F", "NPY", "PD", "C4", "I"]
ignore = ["D1", "D202", "D205", "D400", "D404", "E501", "PD002", "PD901"]
fixable = ["I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in init
"__init__.py" = ["F401",  "I001"]

[tool.pylint]
disable = ["W1203"]
